Added support to fetch snapshot artifacts if not present in taverna.repository. Currently snapshots are only refetched if the taverna.repository is removed.
git-svn-id: http://taverna.googlecode.com/svn@2393 bf327186-88b3-11dd-a302-d386e5130c1c